# SO1_G12_Proyecto1

./: .gitignore
Apis/: docker-compose.yml
Apis/Api Python/: Dockerfile  api.py  python_env.env
Apis/Functions/Go/: closeLoad.go  postTuitCloud.go  postTuitCosmos.go
Apis/GoApi/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  grantFile.txt  main.go
Apis/GoApi/PK/: PS_key.json
Apis/GoApi/cloud/: cloud.go
Apis/GoApi/proxy/: Dockerfile
Apis/GoApi/pubSub/: pubSub.go
Apis/GoApi/types/: types.go
Apis/PruebasGo/: main.go
Apis/PruebasGo/cloud/: cloud.go
Apis/Run/Go/: Dockerfile  deploy.txt  docker-compose.yml  env.env
Apis/RustApi/: .env  .gitignore  Cargo.toml  Dockerfile
Apis/RustApi/src/: main.rs  publishmessage.rs
Cloud SQL/: Olympics.sql
Cloud SQL/Proxy/: Dockerfile  docker-compose.yml
Cloud SQL/Proxy/sql/: key.txt
Load Testers/Go/: .gitignore  Dockerfile  docker-compose.yml  go.mod  main.go  prueba.json
Load Testers/Go/jsonReader/: jsonReader.go
Load Testers/Go/pubSub/: pubSub.go
Load Testers/Go/types/: types.go
Load Testers/Locust/: prueba.json  traffic.py
Load Testers/Python/: TestLoader.py  main.py
Modulos/processlistmod/: Makefile  main.c
Modulos/rammod/: Makefile  rammod.c
Modulos/server/: package-lock.json  package.json
Modulos/server/src/: index.ts
Node/: .env  .gitignore  Dockerfile  app.yaml  docker-compose.yml  index.js  package-lock.json  package.json
Node/src/config/: app.js  cloud.js  cloudRT.js  cosmos.js  cosmosRT.js  socket.js
React/front/: Dockerfile  package-lock.json  package.json
(+13 files in other folders)
