[package]
name = "RustApi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.0"
axum = "0.2.4"
serde_json = "1.0" 
env_logger = "0.7"
dotenv = "0.15.0"
actix-cors = "0.2.0"
actix-web = "2"
actix-rt = "1"
mysql = "18.2.0"
chrono = "0.4"
cloud-pubsub = "0.6.0"
futures = "0.3"
[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]